--- a/Readme
+++ b/Readme
@@ -1,7 +1,21 @@
+  
+  ## Descripción
+Siguiendo el curso de Fernando Herrera en Udemy he podido crear una pequeña aplicación en React que permite buscar tus gifs favoritos.
+La aplicación cuenta con hooks como useState, useEffect y un customhook. También cuenta con props y comunicación entre componentes.
+Atacamos a la API de GIPHY, mostrándonos hasta 20 gifs relacionados con nuestra búsqueda.
+También he realizado varios test a los componentes y hooks de la aplicación mediante jest.
 
 Después de clonar el proyecto, ejecutar el siguiente comando para instalar las dependencias:
  - npm install
-
-
 Para iniciar el proyecto ejecutar el comando:
   - npm run dev
+
+## URL para ver el resultado
+Para ver proyecto en directo puedes verlo aquí (https://adriat1994.github.io/react-gift-expert-app/)
+
+
+## Autor ✒️
+**Adrián Torres**
+* [Github](https://github.com/Adriat1994)
+* [Linkedin](https://www.linkedin.com/in/adri%C3%A1n-torres-serrano-a2519a141/)
+
